--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": false,  // Изменили с true на false
-    "jsx": "react-jsx",
+    // ... другие настройки
     "baseUrl": "src",
     "paths": {
       "@/*": ["./*"],
@@ -25,7 +11,5 @@
       "@entities/*": ["entities/*"],
       "@shared/*": ["shared/*"]
     }
-  },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  }
 }
